--- a/unit08.hw/bai7.html
+++ b/unit08.hw/bai7.html
@@ -7,13 +7,42 @@
 </head>
 <body>
 	<script type="text/javascript">
-		var N=7;
+		
 		for(i=0;i<7;i++){
 			for(j=0;j<=i;j++){
 				document.write('*');
 			}
 			document.writeln('<br/>');
 		}
+		document.writeln('<br/>');
+		
+		for(i=0;i<7;i++){
+			for(j=0;j<7;j++){
+				document.write('*');
+			}
+			document.writeln('<br/>');
+		}
+		document.writeln('<br/>');
+		
+		for(i=0;i<7;i++){
+			for(j=0;j<7;j++){
+				if (i==0||j==0||i==6||j==6) {
+					document.write('*');
+				}else{
+					document.write('&nbsp ');
+				}
+			}
+			document.writeln('<br/>');
+		}
+		document.writeln('<br/>');
+
+		for(i=6;i>=0;i--){
+			for(j=0;j<=i;j++){
+				document.write('*');
+			}
+			document.writeln('<br/>');
+		}
+		
 	</script>
 </body>
 </html>
