--- a/unit10.hw/bai1.html
+++ b/unit10.hw/bai1.html
@@ -9,40 +9,48 @@
 </head>
 <body>
 	<header class="trung">
-		<div class="slide_item">
-	      <img class="slide_img" src="images/murad.jpg" alt="">
+	    <div class="slide_img fade">
+	      <img src="images/murad.jpg" alt="">
 	    </div>
-	    <div class="slide_item">
-	      <img class="slide_img" src="images/nakroth.jpg" alt="">
+	    <div class="slide_img fade">
+	      <img src="images/nakroth.jpg" alt="">
 	    </div>
-	    <div class="slide_item">
-	      <img class="slide_img" src="images/ngokhong.jpg" alt="">
+	    <div class="slide_img fade">
+	      <img src="images/ngokhong.jpg" alt="">
 	    </div>
-	    <div class="slide_item">
-	      <img class="slide_img" src="images/yena.jpg" alt="">
+	    <div class="slide_img fade">
+	      <img src="images/butterfly.jpg" alt="">
 	    </div>
-	    <div class="slide_item">
-	      <img class="slide_img" src="images/butterfly.jpg" alt="">
+	    <div class="slide_img fade">
+	      <img src="images/maloch.jpg" alt="">
 	    </div>
-	    <div class="slide_item">
-	      <img class="slide_img" src="images/maloch.jpg" alt="">
+	    <div class="slide_img fade">
+	      <img src="images/hayate.jpg" alt="">
 	    </div>
-	    <div class="slide_item">
-	      <img class="slide_img" src="images/hayate.jpg" alt="">
+	    <div class="slide_img fade">
+	      <img src="images/raz.jpg" alt="">
 	    </div>
-	    <div class="slide_item">
-	        <img class="slide_img" src="images/raz.jpg" alt="">
-	    </div>
-	    <div class="slide_item">
-	        <img class="slide_img" src="images/violet.jpg" alt="">
-	    </div>
+	    <div class="slide_img fade">
+	          <img src="images/yena.jpg" alt="">
+	        </div>
 
-	    <div class="slider-controls">
-	    	<button class="prev"><i class="fas fa-chevron-left"></i></button>
-	    	<button class="next"><i class="fas fa-chevron-right"></i></button>
-	    </div>
+	    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	    <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
 	</header>
+
+	<ul class="ul">
+      <li class="li" onclick="currentSlide(1)" id="anh1"></li>
+      <li class="li" onclick="currentSlide(2)" id="anh2"></li>
+      <li class="li" onclick="currentSlide(3)" id="anh3"></li>
+      <li class="li" onclick="currentSlide(4)" id="anh4"></li>
+      <li class="li" onclick="currentSlide(5)" id="anh5"></li>
+      <li class="li" onclick="currentSlide(6)" id="anh6"></li>
+      <li class="li" onclick="currentSlide(7)" id="anh7"></li>
+      <li class="li" onclick="currentSlide(8)" id="anh8"></li>
+      <li class="li" onclick="currentSlide(9)" id="anh9"></li>
+    </ul>
+
 
 	<script src="js/bai1.js"></script>
 	
