--- a/unit11.hw/bai1.html
+++ b/unit11.hw/bai1.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/bai1.css">
+	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+
 </head>
 <body>
-	
+	<form id="formDangKy" name="frm">
+		<div id="container">
+			<div id="step1" class="step active">
+				<p>1. Account</p>
+				<div>
+					<legend>Account Information</legend><hr>
+					User name *<br>
+					<input type="text" id="username" name="" value="">
+					<span class="error"></span><br><br>
+
+					Password *<br>
+					<input type="password" id="password" name="" value="">
+					<span class="error"></span><br><br>
+
+					Confirm *<br>
+					<input type="password" id="confirm" name="" value="">
+					<span class="error"></span><br><br>
+
+					(*) Mandatory
+				</div>
+			</div>
+			<div id="step2" class="step">
+				<p>2. Profire</p>
+				<div>
+
+					<legend>Profile Information</legend><hr>
+					First name *<br>
+					<input type="text" id="firstName" name="" value="">
+					<span class="error"></span><br><br>
+
+					Last name *<br>
+					<input type="text" id="lastName" name="" value="">
+					<span class="error"></span><br><br>
+
+					Email *<br>
+					<input type="email" id="email" name="" value="">
+					<span class="error"></span><br><br>
+
+					Address <br>
+					<input type="text" id="address" name="" value="">
+					<span class="error"></span><br><br>
+
+					Age (The warring step will show up if age is less than 18)*<br>
+					<input type="text" id="age" name="" value="">
+					<span class="error"></span><br><br>
+
+					(*) Mandatory
+				</div>
+			</div>
+			<div id="step3" class="step">
+				<p>3. Warring</p>
+				<div>
+					 <legend>Trung đẹp trai chưa có người yêu</legend><hr>
+        			<div>Click '' Next '' to continue.</div>
+				</div>
+			</div>
+			<div id="step4" class="step">
+				<p>4. Finish</p>
+				<div>
+
+					<legend>Terms and Conditions</legend><hr>
+					<input type="checkbox" id="term" name="check" value="">You agree with the Terms and Conditions
+					<span class="er"></span>
+				</div>
+			</div>
+			<br>
+			<div class="button">
+				<span id="back">Previous</span>
+				<span id="next">Next</span>
+			</div>
+		</div>
+	</form>
 	<script type="text/javascript" src="js/bai1.js"></script>
 </body>
 </html>
