--- a/unit13.hw/bai1.html
+++ b/unit13.hw/bai1.html
@@ -4,128 +4,161 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="./css/bootstrap.min.css">
+	<script src="./js/jquery-3.5.1.min.js"></script>
+	<script src="./js/bootstrap.bundle.min.js"></script>
+	<link rel="stylesheet" href="./css/13_1.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+	<link rel="stylesheet" href="./css/animate.min.css">
 </head>
 <body>
-	<header>
-		<div class="main-menu">
-			<div class="container">
-				<nav class="navbar navbar-expand-lg navbar-light bg-light">
-					<a class="navbar-brand" href="#">STARTBOOTSTRAP</a>
-
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_menu" aria-controls="main_menu" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-
-					<div class="collapse navbar-collapse" id="main_menu">
-						<ul class="navbar-nav ml-auto">
-							<li class="nav-item active">
-								<a class="nav-link" href="#">About</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Service</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Profile</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Contact</a>
-							</li>
-						</ul>
-					</div>
-				</nav>
-			</div>
-		</div>
-	</header><!-- /header -->
-
-	<main>
-		<div class="your-service">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-3 col-md-6 col-sm-6 col-12">
-						<div class="card text-center">
-							<div class="card-icon">
-								<i class="fa fa-diamond" aria-hidden="true"></i>
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-sm-6 col-12">
-						<div class="card text-center">
-							<div class="card-icon">
-								<i class="fa fa-diamond" aria-hidden="true"></i>
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-sm-6 col-12">
-						<div class="card text-center">
-							<div class="card-icon">
-								<i class="fa fa-diamond" aria-hidden="true"></i>
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6 col-sm-6 col-12">
-						<div class="card text-center">
-							<div class="card-icon">
-								<i class="fa fa-diamond" aria-hidden="true"></i>
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-							</div>
-						</div>
-					</div>
+	<div class="container-fluid">
+		<header>
+			<div class="row menu-bar">
+				<div class="col-xl-12">
+					<nav class="navbar navbar-expand-md navbar-dark">
+						<a class="font-weight-bold" href="#">START BOOTSTRAP</a>
+						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+							<span><i class="fas fa-bars"></i></span>
+						</button>
+						<div class="collapse navbar-collapse font-weight-bold justify-content-end" id="collapsibleNavbar">
+							<ul class="navbar-nav">
+								<li class="nav-item">
+									<a class="nav-link" href="#">ABOUT</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="#">SERVICES</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="#">PORTFOLIO</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="#">CONTACT</a>
+								</li>  
+							</ul>
+						</div>  
+					</nav>
 				</div>
 			</div>
-		</div>
-		<div class="my-gallery">
-			<div class="row mr-0 ml-0">
-				<div class="col-lg-4 col-md-6 col-sm-6 col-12 pl-0 pr-0">
-					<img src="images/1.jpg" class="w-100">
+
+			<div class="row box-1 text-white">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+					<p class="title-1 text-center font-weight-bold">YOUR FAVORITE SOURCE OF FREE BOOTSTRAP THEMES</p>
+					<hr class="hr1">
 				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6 col-12 pl-0 pr-0">
-					<img src="images/2.jpg" class="w-100">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+					<p class="title-2 text-center">
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur et, blanditiis ad nam perspiciatis tenetur in, sit quisquam alias amet accusamus dicta libero enim aut maiores eius animi? Atque, asperiores.
+					</p>
 				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6 col-12 pl-0 pr-0">
-					<img src="images/3.jpg" class="w-100">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center">
+					<button type="button" class="btn btn-danger font-weight-bold btnfix">FIND OUT MORE</button>
 				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6 col-12 pl-0 pr-0">
-					<img src="images/4.jpg" class="w-100">
+			</div>
+
+			<div class="row box-1 box-1a text-white">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+					<p class="title-1a title-1b text-center font-weight-bold">We've got what you need</p>
+					<hr class="hr2">
 				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6 col-12 pl-0 pr-0">
-					<img src="images/5.jpg" class="w-100">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+					<p class="title-2 text-center">
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur et, blanditiis ad nam perspiciatis tenetur in, sit quisquam alias amet accusamus dicta libero enim aut maiores eius animi? Atque, asperiores.
+					</p>
 				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6 col-12 pl-0 pr-0">
-					<img src="images/6.jpg" class="w-100">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center">
+					<button type="button" class="btn btn-light font-weight-bold btnfix1">GET STARTED!</button>
+				</div>
+			</div>
+		</header>
+
+		<div class="container">
+			<div class="row box-1">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+					<p class="title-1a title-1b text-center">At Your Service</p>
+					<hr class="hr1">
+				</div>
+				<div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+					<p class="d-flex justify-content-center">
+						<i class="far fa-gem"></i>
+					</p>
+					<h4 class="text-center">Sturdy Templates</h4>
+					<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit consec</p>
+				</div>
+				<div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+					<p class="d-flex justify-content-center">
+						<i class="fas fa-paper-plane"></i>
+					</p>
+					<h4 class="text-center">Ready to Ship</h4>
+					<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit consec</p>
+				</div>
+				<div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+					<p class="d-flex justify-content-center">
+						<i class="far fa-newspaper"></i>
+					</p>
+					<h4 class="text-center">Up to Date</h4>
+					<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit consec</p>
+				</div>
+				<div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+					<p class="d-flex justify-content-center">
+						<i class="fas fa-heart"></i>
+					</p>
+					<h4 class="text-center">Made with Love</h4>
+					<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit consec</p>
 				</div>
 			</div>
 		</div>
-	</main>
 
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+		<div class="row box-2">
+			<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 img-pd">
+				<img src="./images/1.jpg" alt="">
+			</div>
+			<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 img-pd">
+				<img src="./images/2.jpg" alt="">
+			</div>
+			<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 img-pd">
+				<img src="./images/3.jpg" alt="">
+			</div>
+			<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 img-pd">
+				<img src="./images/4.jpg" alt="">
+			</div>
+			<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 img-pd">
+				<img src="./images/5.jpg" alt="">
+			</div>
+			<div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 img-pd">
+				<img src="./images/6.jpg" alt="">
+			</div>
+			<div class="col-xl-12 box-2a bg-dark">
+				<h2 class="text-white text-center">Free Download at Start Bootstrap!</h2>
+				<div class="d-flex justify-content-center butt">
+					<button type="button" class="btn btn-light font-weight-bold btnfix2">DOWNLOAD NOW!</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="row box-3">
+			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+				<p class="title-1a title-1b text-center font-weight-bold">Let's Get In Touch!</p>
+				<hr class="hr1">
+			</div>
+			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+				<p class="title-2 text-center">
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur et, blanditiis ad nam perspiciatis tenetur in, sit quisquam alias amet accusamus dicta libero enim aut maiores eius animi? Atque, asperiores.
+				</p>
+			</div>
+			<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 squa-l">
+				<p class="d-flex justify-content-center">
+					<i class="fas fa-phone-alt"></i>
+				</p>
+				<p class="text-center">123-456-7890</p>
+			</div>
+			<div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-6 squa-r">
+				<p class="d-flex justify-content-center">
+					<i class="far fa-envelope"></i>
+				</p>
+				<p class="text-center" style="color: #FA573D;">feedback@support.com</p>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
-
-
-https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css
-https://cdn.jsdelivr.net
-
-https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
-https://stackpath.bootstrapcdn.com
-
-
-
-Type a message
